--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
         <link rel="stylesheet" href="styles.css">
     </head>
     <body>
-        <div id="div1"></div><br />
+        <div id="div1"><h1>Wesołych świąt!</h1></div><br />
         <div id="div2"></div>
         <br /><br />
         <div id="div3"></div><br />
-        <div id="div4"><p>Najedź na mnie!</p></div><br />
+        <div id="div4"></div><br />
         <div id="div5">
             <div id="normal">
                 <p>Złap mnie!</p>
